Fixes spacing for smaller browser windows

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -10,7 +10,7 @@ body {
 
 
 .container {
-  width: 50%;
+  width: 75%;
 }
 
 .card-deck {
